--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mapa de Filiais e Fornecedores</title>
+  <title>Fornecedores de Suporte por Região </title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
     body {
@@ -56,7 +56,7 @@
 </head>
 <body>
   <header>
-    <h1>Mapa de Filiais e Fornecedores</h1>
+    <h1>Fornecedores de Suporte por Região</h1>
   </header>
   <div class="container">
     <section class="section">
